RESOLVED FIXED161672
[INTL] some valid language tags cause errors in Intl constructors
https://bugs.webkit.org/show_bug.cgi?id=161672
Summary [INTL] some valid language tags cause errors in Intl constructors
Andy VanWagoner
Reported 2016-09-06 20:37:21 PDT
The tests for language tag handling in the kangax compat tables[1][2] fail in JSC on some valid language tags: cmn-hans-cn-t-ca-u-ca-x-t-u aa-a-foo-x-a-foo-bar x-en-u-foo x-en-u-foo-u-bar Implementations in Firefox, Chrome, and Edge pass these tests. [1] http://kangax.github.io/compat-table/esintl/ [2] https://github.com/tc39/test262/blob/83b07ff15eadb141c3d6f4d236a8733b720041d2/test/intl402/6.2.2_a.js
Attachments
Patch (16.11 KB, patch)
2016-09-07 07:40 PDT, Andy VanWagoner
no flags
Patch (16.24 KB, patch)
2016-09-07 10:02 PDT, Andy VanWagoner
no flags
Andy VanWagoner
Comment 1 2016-09-07 06:27:12 PDT
I know where the problem is, and can submit a patch for this.
Andy VanWagoner
Comment 2 2016-09-07 07:40:34 PDT
Mark Lam
Comment 3 2016-09-07 09:00:14 PDT
Comment on attachment 288135 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=288135&action=review r=me > Source/JavaScriptCore/ChangeLog:8 > + Fix private use tag parsing to match spec, allowing single character parts. If it's handy, I suggest quoting the relevant part of the spec here, or providing a url to it.
Andy VanWagoner
Comment 4 2016-09-07 10:02:37 PDT
Andy VanWagoner
Comment 5 2016-09-07 10:03:20 PDT
(In reply to comment #3) > Comment on attachment 288135 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=288135&action=review > > r=me > > > Source/JavaScriptCore/ChangeLog:8 > > + Fix private use tag parsing to match spec, allowing single character parts. > > If it's handy, I suggest quoting the relevant part of the spec here, or > providing a url to it. done. Is this format ok?
Mark Lam
Comment 6 2016-09-07 13:06:41 PDT
Comment on attachment 288154 [details] Patch r=me
WebKit Commit Bot
Comment 7 2016-09-07 15:03:39 PDT
Comment on attachment 288154 [details] Patch Clearing flags on attachment: 288154 Committed r205568: <http://trac.webkit.org/changeset/205568>
WebKit Commit Bot
Comment 8 2016-09-07 15:03:44 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.