[INTL] some valid language tags cause errors in Intl constructors https://bugs.webkit.org/show_bug.cgi?id=161672

Patch by Andy VanWagoner <thetalecrafter@gmail.com> on 2016-09-07
Reviewed by Mark Lam.

Source/JavaScriptCore:

Fix private use tag parsing to match spec, allowing single character parts.
https://www.rfc-editor.org/rfc/bcp/bcp47.txt

```
privateuse    = "x" 1*("-" (1*8alphanum))
```

* runtime/IntlObject.cpp:
(JSC::privateUseLangTag): Allow singleton parts in private use tag.

LayoutTests:

Add list of valid language tags that should not throw from test262.

* js/intl-collator-expected.txt:
* js/intl-datetimeformat-expected.txt:
* js/intl-numberformat-expected.txt:
* js/script-tests/intl-collator.js:
* js/script-tests/intl-datetimeformat.js:
* js/script-tests/intl-numberformat.js:

Canonical link: https://commits.webkit.org/179883@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205568 268f45cc-cd09-0410-ab3c-d52691b4dbfc